This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

20-Feb-2002 (Lars Duening)  (3.3.395)
  - (mempools, files.c, swap.c, object.c) The file reading efuns (read_file(),
       read_bytes(), restore_()) and the swapper now use a persistent buffer
       to hold the variable data in memory. Goal is to avoid allocations and
       deallocations of large memory blocks which worsen the memory
       fragmentation.

18-Feb-2002 (Lars Duening)  (3.3.394)
  - (smalloc, efuns.c) Since smalloc can split up large small blocks and
       handle oversized ones, having the special case of 'unused space' in the
       current small chunk is no longer necessary. This also means that the
       DID_MEM_UNUSED value from debug_info() no longer exists (b-020506).

16-Feb-2002 (Lars Duening)  (3.3.393)
  - (smalloc, backend.c, gcollect.c) The smalloc freelist consolidation
       is now also called from the backend and does its job whenever
       the number of free small blocks is twice the amount the last
       consolidation left over.
  - (smalloc.c) The maximum small block size has been reduced to 64 Bytes:
       it turned out that the larger sizes aren't deallocated often enough
       to make the free lists work, which caused unnecessary small chunk
       allocations.
  - (sprintf.c) Normal (top-level) sprintf() calls now use a static
       instance of the fmt_state_t buffer, avoided repeated (de)allocations
       of that 130KB structure.

16-Feb-2002 (Lars Duening)  (3.3.392)
  - (smalloc.c) Since parsing the min-small-malloc already requires
       a small chunk allocation, the small chunk allocation using the new
       chunk size is also forced to go directly to the system.

15-Feb-2002 (Lars Duening)  (3.3.391)
  - (ptmalloc) Gawain provided the first locking code for the GC.
  - (interpret.c) On 'too deep recursion' errors, also print the depth