@@ -52,12 +52,12 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 395)
-(Parent-Version lpmud 3-3 394)
-(Version-Log "Introduced persistent buffers for the swapper and file-reading efuns.")
+(Project-Version lpmud 3-3 396)
+(Parent-Version lpmud 3-3 395)
+(Version-Log "Added the buffer statistics to the debug_info() results.")
 (New-Version-Log
 "")
-(Checkin-Time "Thu, 20 Feb 2003 23:06:55 -0700")
+(Checkin-Time "Thu, 20 Feb 2003 23:40:28 -0700")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -94,7 +94,7 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.8 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.58 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.458 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.459 644))
   (HISTORY (lpmud/f/49_HISTORY 1.301 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.19 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -103,7 +103,7 @@
   (src/configure (lpmud/d/0_configure 1.19.1.75 755))
   (src/config.h.in (lpmud/d/1_config.h 1.41.1.4.1.8.1.25 644))
   (src/machine.h.in (lpmud/b/9_machine.h. 1.9.1.5 644))
-  (src/Makefile.in (lpmud/d/17_Makefile.i 1.37.1.39.1.19.1.10 644))
+  (src/Makefile.in (lpmud/d/17_Makefile.i 1.37.1.39.1.19.1.11 644))
   (src/mkinstalldirs (lpmud/c/4_mkinstalld 1.1 644))
   (src/install-sh (lpmud/c/5_install-sh 1.2 755))
 
@@ -171,7 +171,7 @@
   (src/ed.h (lpmud/f/34_ed.h 1.5.1.6 644))
   (src/ed.c (lpmud/c/33_ed.c 1.32.1.27 644))
   (src/efuns.h (lpmud/l/20_efuns.h 1.13.1.19.1.1 644))
-  (src/efuns.c (lpmud/l/21_efuns.c 1.42.1.47.1.66 644))
+  (src/efuns.c (lpmud/l/21_efuns.c 1.42.1.47.1.67 644))
   (src/exec.h (lpmud/c/32_exec.h 1.34.1.33.1.6 644))
   (src/files.h (lpmud/i/49_files.h 1.2 644))
   (src/files.c (lpmud/i/50_files.c 1.20 644))
@@ -188,13 +188,13 @@
   (src/lex.h (lpmud/b/11_lex.h 1.16.1.15.1.4 644))
   (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.46 644))
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.13 644))
-  (src/main.c (lpmud/b/8_main.c 1.60.1.43.1.34 644))
+  (src/main.c (lpmud/b/8_main.c 1.60.1.43.1.35 644))
   (src/mapping.h (lpmud/f/30_mapping.h 1.12.1.14 644))
   (src/mapping.c (lpmud/b/6_mapping.c 1.36.1.55 644))
   (src/md5.h (lpmud/l/18_md5.h 1.2 644))
   (src/md5.c (lpmud/l/19_md5.c 1.6 644))
-  (src/mempools.h (lpmud/d/48_mempools.h 1.2.1.4 644))
-  (src/mempools.c (lpmud/d/49_mempools.c 1.2.1.6 644))
+  (src/mempools.h (lpmud/d/48_mempools.h 1.2.1.5 644))
+  (src/mempools.c (lpmud/d/49_mempools.c 1.2.1.7 644))
   (src/mregex.h (lpmud/e/29_rxcache.h 1.7.1.10 644))
   (src/mregex.c (lpmud/e/30_rxcache.c 1.11.1.27 644))
   (src/mstrings.h (lpmud/i/35_mstrings.h 1.20 644))
@@ -270,7 +270,7 @@
   (src/simul_efun.h (lpmud/f/17_simul_efun 1.5.1.5 644))
   (src/simul_efun.c (lpmud/32_simul_efun 1.20.1.17.1.3 644))
   (src/simulate.h (lpmud/f/16_simulate.h 1.25.1.31 644))
-  (src/simulate.c (lpmud/31_simulate.c 1.88.1.100 644))
+  (src/simulate.c (lpmud/31_simulate.c 1.88.1.101 644))
   (src/smalloc.h (lpmud/29_smalloc.h 1.16.1.14 644))
   (src/smalloc.c (lpmud/30_smalloc.c 1.31.1.70 644))
   (src/structs.h (lpmud/d/b/5_structs.h 1.3 644))
@@ -322,7 +322,7 @@
   (src/hosts/be/config.h (lpmud/e/34_config.h 1.32.1.33 644))
   (src/hosts/be/be.h (lpmud/e/35_be.h 1.7 644))
   (src/hosts/be/beyacc (lpmud/i/39_beyacc 1.1 744))
-  (src/hosts/be/Makefile (lpmud/e/37_Makefile 1.60.1.71.1.10 644))
+  (src/hosts/be/Makefile (lpmud/e/37_Makefile 1.60.1.71.1.11 644))
   (src/hosts/be/icon-32x32.raw (lpmud/s/37_icon-32x32 1.1 644) :no-keywords)
   (src/hosts/be/icon-16x16.raw (lpmud/s/38_icon-16x16 1.1 644) :no-keywords)
   (src/hosts/be/driver.rsrc (lpmud/s/39_driver.rsr 1.1 644) :no-keywords)
@@ -335,7 +335,7 @@
 
   ;; Host: OS/2
   (src/hosts/os2/machine.h (lpmud/m/36_machine.h 1.1 644))
-  (src/hosts/os2/Makefile (lpmud/m/37_Makefile 1.26.1.9 644))
+  (src/hosts/os2/Makefile (lpmud/m/37_Makefile 1.26.1.10 644))
 
   ;; Host: Win32
   (src/hosts/win32/tubmud.bmp (lpmud/g/20_tubmud.bmp 1.1 644) :no-keywords)
@@ -432,7 +432,7 @@
 
   ;; Driver-related include files for the mudlib
   (mudlib/sys/commands.h (lpmud/d/15_commands.h 1.3.1.3 644))
-  (mudlib/sys/debug_info.h (lpmud/t/6_debug_info 1.17 644))
+  (mudlib/sys/debug_info.h (lpmud/t/6_debug_info 1.18 644))
   (mudlib/sys/driver_hook.h (lpmud/d/30_driver_hoo 1.2.1.6 644))
   (mudlib/sys/debug_message.h (lpmud/k/8_debug_mess 1.3 644))
   (mudlib/sys/erq.h (lpmud/d/29_erq.h 1.5.1.3 644))
@@ -1037,7 +1037,7 @@
   (doc/efun/db_fetch (lpmud/e/27_db_fetch 1.2.1.3 644))
   (doc/efun/db_handles (lpmud/e/33_db_handles 1.1.1.4 644))
   (doc/efun/db_insert_id (lpmud/l/1_db_insert_ 1.2 644))
-  (doc/efun/debug_info (lpmud/o/22_debug_info 1.24 644))
+  (doc/efun/debug_info (lpmud/o/22_debug_info 1.25 644))
   (doc/efun/debug_message (lpmud/o/23_debug_mess 1.1.1.4 644))
   (doc/efun/deep_copy (lpmud/m/29_deep_copy 1.4 644))
   (doc/efun/deep_inventory (lpmud/o/24_deep_inven 1.3 644))
